@@ -28,73 +28,41 @@ public class CentroAdozioneControllerTest {
     private CentroAdozioneController controller;
 
     @Test
-    void testFindByCitta_Success() {
+    void testCercaComeUser_Success() {
         String citta = "Roma";
         List<CentroAdozioneDto> mockLista = List.of(new CentroAdozioneDto());
         when(service.findByCitta(citta)).thenReturn(mockLista);
 
-        List<CentroAdozioneDto> result = controller.findByCitta(citta);
+        // Cambiato da findByCitta a cercaComeUser
+        String result = controller.cercaComeUser(citta);
 
-        assertThat(result).hasSize(1);
-        verify(service).findByCitta(citta);
-    }
-
-    // 🔹 Test città senza centri
-    @Test
-    void testFindByCitta_NotFound_ReturnsEmptyList() {
-        String citta = "CittaInesistente";
-        when(service.findByCitta(citta)).thenReturn(Collections.emptyList());
-
-        List<CentroAdozioneDto> result = controller.findByCitta(citta);
-
-        assertThat(result).isEmpty();
+        assertThat(result).contains("--- SONO USER ---");
+        assertThat(result).contains(citta);
         verify(service).findByCitta(citta);
     }
 
     @Test
-    void testFindByIsNoProfit() {
-        boolean noProfit = true;
-        List<CentroAdozioneDto> mockLista = List.of(new CentroAdozioneDto(), new CentroAdozioneDto());
-        when(service.findByIsNoProfit(noProfit)).thenReturn(mockLista);
+    void testVisualizzaComeUser_Success() {
+        when(service.listaTuttiICentri()).thenReturn(Collections.emptyList());
 
-        List<CentroAdozioneDto> result = controller.findByIsNoProfit(noProfit);
+        // Cambiato da getAllCentri a visualizzaComeUser
+        String result = controller.visualizzaComeUser();
 
-        assertThat(result).hasSize(2);
-        verify(service).findByIsNoProfit(noProfit);
+        assertThat(result).contains("--- SONO USER ---");
+        verify(service).listaTuttiICentri();
     }
 
     @Test
-    void testFindByNomeCentro_Success() {
-        String nome = "Rifugio Speranza";
-        CentroAdozioneDto mockDto = new CentroAdozioneDto();
-        when(service.findByNomeCentro(nome)).thenReturn(mockDto);
+    void testCreaComeAdmin_Success() {
+        CentroAdozioneDto dto = new CentroAdozioneDto();
+        dto.setNomeCentro("Rifugio Test");
+        when(service.salvaNuovo(dto)).thenReturn(dto);
 
-        CentroAdozioneDto result = controller.findByNomeCentro(nome);
+        // Cambiato da crea a creaComeAdmin
+        String result = controller.creaComeAdmin(dto);
 
-        assertThat(result).isNotNull();
-        verify(service).findByNomeCentro(nome);
-    }
-
-    // 🔹 Test nome centro inesistente
-    @Test
-    void testFindByNomeCentro_NotFound_ReturnsNull() {
-        String nome = "NomeFantasia";
-        when(service.findByNomeCentro(nome)).thenReturn(null);
-
-        CentroAdozioneDto result = controller.findByNomeCentro(nome);
-
-        assertThat(result).isNull();
-        verify(service).findByNomeCentro(nome);
-    }
-
-    // 🔹 Test con parametro null (Robustezza)
-    @Test
-    void testFindByCitta_NullParam() {
-        when(service.findByCitta(null)).thenReturn(Collections.emptyList());
-
-        List<CentroAdozioneDto> result = controller.findByCitta(null);
-
-        assertThat(result).isEmpty();
-        verify(service).findByCitta(null);
+        assertThat(result).contains("--- SONO ADMIN ---");
+        assertThat(result).contains("Rifugio Test");
+        verify(service).salvaNuovo(dto);
     }
 }
